Fix: Decrease font size to prevent overflow on mobile

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -3,10 +3,10 @@ body {
 }
 
 #calendar-container {
-    max-width: 100%;
+    max-width: 99%;
     width: 600px;
     margin: 0 auto;
-    padding: 10px;
+    padding: 1px;
     border: 2px solid #007bff;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -15,8 +15,7 @@ body {
 
 #month-year {
     font-weight: bold;
-    font-size: 24px;
-    margin-bottom: 20px;
+    font-size: 1.2em;
     text-align: center;
 }
 
@@ -24,11 +23,10 @@ button {
     background-color: #007bff;
     color: white;
     border: none;
-    border-radius: 5px;
+    border-radius: 2px;
     cursor: pointer;
-    padding: 10px 20px;
-    margin: 10px;
-    font-size: 16px;
+    padding: 4px;
+    margin: 2px;
     transition: background-color 0.3s;
 }
 
@@ -39,7 +37,7 @@ button:hover {
 #calendar, #calendar-header {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
-    gap: 10px;
+    gap: 4px;
     border-top: 1px solid #ccc;
 }
 
@@ -48,7 +46,7 @@ button:hover {
 }
 
 #calendar div, #calendar-header div {
-    padding: 5px;
+    padding: 1px;
     border: none;
     position: relative;
     text-align: center;
@@ -56,12 +54,13 @@ button:hover {
     justify-content: center;
     align-items: center;
     font-family: "Arial Black", sans-serif;
-    font-size: 0.8em;
+    font-size: 0.75em;
     font-weight: bold;
 }
 
 #calendar div {
-    font-size: 1.25em;
+    padding: 5px 1px;
+    font-size: 1.2em;
 }
 
 .saturday {
